# My-Career-Digital-Twin-An-AI-Agent-That-Represents-Me-to-Employers

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
me/: summary.txt
