[project]
name = "ai-agent-resume"
version = "0.1.0"
description = "AI Agent representing candidate from resume"
authors = [
    {name = "Akhil Gunda", email = "your-email@example.com"}
]
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "gradio>=4.0.0",
    "huggingface-hub[cli]>=0.34.4",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
